[metadata]
name = wait_for_it_to
description = Helper library which waits
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/studioj/wait_for_it/
author = Jef Neefs
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Utilities
    Topic :: Office/Business
    Topic :: Software Development
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP
keywords = wait, time, no_sleep,

[options]
include_package_data = True
packages = find:
setup_requires =
  setuptools_scm==7.1.0
python_requires = >=3.6

[options.extras_require]
test = pytest==7.3.1

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths =
    tests